Fix unvisible media in Safari.

--- a/app/assets/stylesheets/stream_entries.scss
+++ b/app/assets/stylesheets/stream_entries.scss
@@ -223,6 +223,8 @@
         flex-direction: column;
 
         .media-item {
+          flex: 0;
+
           img {
             width: 100%;
           }
